@@ -14,7 +14,7 @@
 %% \item \code{as(<large-matrix>, "sparseMatrix")} no longer fails
 %%  when \code{prod(dim(.))} is larger than \eqn{2^{31} - 1}.
 %
-\section{Changes in version 1.2-13 (2018-03-19, svn r3264)}{
+\section{Changes in version 1.2-13 (2018-03-21, svn r3264)}{
   \subsection{New Features}{
     \itemize{
       \item Faster \code{as(<matrix>, "sparseMatrix")} and coercion
@@ -51,6 +51,11 @@
       \item \code{<sparseVector>[ <negative integer> ]} now also gives
       the correct answer when the result is \dQuote{empty}, i.e., all
       zero or false.
+
+      \item large \code{"dspMatrix"} and \code{"dtpMatrix"} objects can
+      now be constructed via \code{new(*, Dim = *, x = *)} also when
+      \code{length(x)} is larger than 2^31 (as the C internal
+      validation method no longer suffers from integer overflow).
     }
   }
 }
